--- a/templates/page-6.tmpl
+++ b/templates/page-6.tmpl
@@ -61,4 +61,6 @@
     </td>
 </td></tr></table>
     
-<script type="text/javascript"><![CDATA[  jQuery(function() { jQuery('head').append('<script type="text/javascript" src="[% baseImageDir %]/_lightBox/jquery.lightbox-0.5.pack.js"><\/script>'); jQuery('head').append('<link rel="stylesheet" href="[% baseImageDir %]/_lightBox/jquery.lightbox-0.5.css" type="text/css" media="screen" />'); jQuery('a[rel*=samples]').lightBox({'imageLoading':'[% baseImageDir %]/_lightBox/lightbox-ico-loading.gif', 'imageBtnClose': '[% baseImageDir %]/_lightBox/lightbox-btn-close.gif', 'imageBtnPrev':'[% baseImageDir %]/_lightBox/lightbox-btn-prev.gif','imageBtnNext':'[% baseImageDir %]/_lightBox/lightbox-btn-next.gif','imageBlank':'[% baseImageDir %]/_lightBox/lightbox-blank.gif'}); }); ]]></script>
+<script type="text/javascript"><!--
+jQuery(function() { jQuery('head').append('<script type="text/javascript" src="[% baseDir %]/_lightBox/jquery.lightbox-0.5.pack.js"><\/script>').append('<link rel="stylesheet" href="[% baseDir %]/_lightBox/jquery.lightbox-0.5.css" type="text/css" media="screen" />'); jQuery('a[rel*=samples]').lightBox({'imageLoading':'[% baseDir %]/_lightBox/lightbox-ico-loading.gif', 'imageBtnClose': '[% baseDir %]/_lightBox/lightbox-btn-close.gif', 'imageBtnPrev':'[% baseDir %]/_lightBox/lightbox-btn-prev.gif','imageBtnNext':'[% baseDir %]/_lightBox/lightbox-btn-next.gif','imageBlank':'[% baseDir %]/_lightBox/lightbox-blank.gif'}); }); 
+--></script>
