--- a/templates/page-6.tmpl
+++ b/templates/page-6.tmpl
@@ -2,7 +2,7 @@
 <table border="0" cellspacing="0" cellpadding="2" width="100%">
 <tr>
 [% IF avatar || links %]
-    <td valign="top">
+    <td valign="top" style="width: 260px;">
         [% IF avatar %]
         <div style="height: 240px; width: 240px; background-color: #ECECEC; border: 1em solid black; margin-right: 0.5em; text-align: center; "><img src="[% avatar | html %]" alt="avatar" /></div>
         <br />
