--- a/templates/everyone.tmpl
+++ b/templates/everyone.tmpl
@@ -4,5 +4,9 @@
 <hr />
 [% END %]
 <script type="text/javascript"><!--
-jQuery(function() { jQuery('head').append('<script type="text/javascript" src="[% baseDir %]/_lightBox/jquery.lightbox-0.5.pack.js"><\/script>').append('<link rel="stylesheet" href="[% baseDir %]/_lightBox/jquery.lightbox-0.5.css" type="text/css" media="screen" />'); jQuery('a[rel*=samples]').lightBox({'imageLoading':'[% baseDir %]/_lightBox/lightbox-ico-loading.gif', 'imageBtnClose': '[% baseDir %]/_lightBox/lightbox-btn-close.gif', 'imageBtnPrev':'[% baseDir %]/_lightBox/lightbox-btn-prev.gif','imageBtnNext':'[% baseDir %]/_lightBox/lightbox-btn-next.gif','imageBlank':'[% baseDir %]/_lightBox/lightbox-blank.gif'}); }); 
+jQuery('head')
+    .append('<script type="text/javascript" src="[% baseDir %]/_lightBox/jquery.lightbox-0.5.pack.js"><\/script>').
+    append('<link rel="stylesheet" href="[% baseDir %]/_lightBox/jquery.lightbox-0.5.css" type="text/css" media="screen" />');
+    var rels = {}; 
+    jQuery('a[rel*=sample]').each(function(a, b) { var rel = jQuery(b).attr('rel'); if (rels[rel]) { return; } rels[rel] = 1; jQuery('a[rel^='+rel+']').lightBox({'imageLoading':'[% baseDir %]/_lightBox/lightbox-ico-loading.gif', 'imageBtnClose': '[% baseDir %]/_lightBox/lightbox-btn-close.gif', 'imageBtnPrev':'[% baseDir %]/_lightBox/lightbox-btn-prev.gif','imageBtnNext':'[% baseDir %]/_lightBox/lightbox-btn-next.gif','imageBlank':'[% baseDir %]/_lightBox/lightbox-blank.gif'});});
 --></script>
