--- a/templates/page-6.tmpl
+++ b/templates/page-6.tmpl
@@ -37,7 +37,7 @@
                                 [% FOREACH sample IN items %]
                                 <td style="background-color:#ECECEC; margin: 0px; padding: 2px; height: 50px; width: 50px; text-align: center; border: 2px solid #284771; margin-bottom: 1em;">
                                     [% IF (sample) %]
-                                    <a rel="samples" href="[% sample.i | html %]" style="border: 0px" target="_blank"><img style="border: 0px" src="[% sample.t | html %]" alt="sample Image"/></a>
+                                    <a rel="samples_[% artist | html %]" href="[% sample.i | html %]" style="border: 0px" target="_blank"><img style="border: 0px" src="[% sample.t | html %]" alt="sample Image"/></a>
                                     [% END %]
                                 </td>
                                 [% END %]
