--- a/templates/page-6.tmpl
+++ b/templates/page-6.tmpl
@@ -1,4 +1,5 @@
 [%- USE Markdown -%]
+<a id="[% artist | html %]" name="[% artist | html %]"></a>
 <h1>[% artistName | html %]</h1>
 <table border="0" cellspacing="0" cellpadding="2" width="100%">
 <tr>
