--- a/templates/real_footer.tmpl
+++ b/templates/real_footer.tmpl
@@ -2,14 +2,13 @@
 </td>
 <td width="20%" valign="top">
 	<table border="0" cellspacing="0" cellpadding="2" width="100%">
-			<tr><td align="center"><a href="http://www.animeevolution.com/?page_id=1073"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/register.jpg" border="0"></a></td></tr>
-		<tr><td align="center"><a href="http://animeevolution.net"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/forum.jpg" border="0"></a></td></tr>
-		<tr><td align="center"><a href="http://www.animeevolution.com/?page_id=1083"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/hotel.jpg" border="0"></a></td></tr>
+			<tr><td align="center"><a href="http://www.animeevolution.com/?page_id=1073"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/register.jpg" alt="Register" border="0"/></a></td></tr>
+		<tr><td align="center"><a href="http://animeevolution.net"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/forum.jpg" border="0" alt="forum" /></a></td></tr>
+		<tr><td align="center"><a href="http://www.animeevolution.com/?page_id=1083"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/hotel.jpg" border="0" alt="hotel" /></a></td></tr>
 		<tr><td>&nbsp;</td></tr>
 		<tr><td bgcolor="#eeeeee" style="padding: 5px;">
-		<h3>
-		<b>Anime Evolution begins...</h3>
-<abbr title = "June 12th, 2009, 1:00 am" style="border: 0px;"><span id = 'xd14c50ccf478795f08c67767d465740c'>in 34 days,  23 hours,  48 minutes</span></abbr></b></td></tr>
+		<h3><b>Anime Evolution begins...</b></h3>
+<abbr title = "June 12th, 2009, 1:00 am" style="border: 0px;"><span id = 'xd14c50ccf478795f08c67767d465740c'>in 34 days,  23 hours,  48 minutes</span></abbr></td></tr>
 		<tr><td>&nbsp;</td></tr>
 
 		<tr><td class="sidebar_header">Search</td></tr>
@@ -18,7 +17,7 @@
 <input type="hidden" id="searchsubmit" value="Search" />
 </form>
 </td></tr>
-		<tr><td>&nbsp;<td></tr>
+		<tr><td>&nbsp;</td></tr>
 
 		<tr><td class="sidebar_header">Quicklinks</td></tr><tr><td>
 	<ul class='xoxo blogroll'>
@@ -32,7 +31,7 @@
 	</ul>
 </td></tr>
  
-		<tr><td>&nbsp;<td></tr>
+		<tr><td>&nbsp;</td></tr>
 		
 		<tr><td class="sidebar_header">Twitter update</td></tr>
 		<tr><td>
