--- a/templates/real_header.tmpl
+++ b/templates/real_header.tmpl
@@ -39,7 +39,7 @@
 	
 
 	/***********************************************
-	* Tab Content script v2.2- © Dynamic Drive DHTML code library (www.dynamicdrive.com)
+	* Tab Content script v2.2- &copy; Dynamic Drive DHTML code library (www.dynamicdrive.com)
 	* This notice MUST stay intact for legal use
 	* Visit Dynamic Drive at http://www.dynamicdrive.com/ for full source code
 	***********************************************/
@@ -51,12 +51,12 @@
 <body background="http://www.animeevolution.com/main/wp-content/themes/ae/images/bg.jpg" style="padding;0px; margin: 0px;">
 <table border="0" cellspacing="0" cellpadding="0" align="center" width="997">
 	<tr>
-		<td colspan="2"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/top.gif"></td>
+		<td colspan="2"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/top.gif" alt="top" /></td>
 	</tr>
 	<tr>
 		<td colspan="2">
 			<table border="0" cellspacing="0" cellpadding="0"><tr>
-				<td><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/menu_left.jpg"></td>
+				<td><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/menu_left.jpg" alt="menu_left" /></td>
 				<td>
 <!-- Multi-level Navigational Plugin by PixoPoint Web Development ... http://pixopoint.com/multi-level-navigation/ -->
 
@@ -140,7 +140,7 @@
 			</tr></table></td>
 	</tr>
 	<tr>
-		<td valign="top" width="34"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/left.jpg" style="margin:0px; padding:0px;"></td>
+		<td valign="top" width="34"><img src="http://www.animeevolution.com/main/wp-content/themes/ae/images/left.jpg" style="margin:0px; padding:0px;" alt="blah" /></td>
 		<td valign="top" bgcolor="#FFFFFF">
 		<table border="0" cellspacing="0" cellpadding="10px" width="100%">
 			<tr>
