--- a/templates/vhost.conf.tmpl
+++ b/templates/vhost.conf.tmpl
@@ -1,4 +1,4 @@
-[% SET baseURL = "http://ae09ag.kodekoan.com/everyone.html" %]
+[% SET baseURL = "http://www.animeevolution.com/?page_id=1559" %]
 
 <VirtualHost *:80>
 	ServerName ae09.com
