--- a/templates/vhost.conf.tmpl
+++ b/templates/vhost.conf.tmpl
@@ -1,21 +1,53 @@
-[% SET baseURL = "http://www.animeevolution.com/?page_id=1559" %]
+[% SET mainURL = "http://www.animeevolution.com/" %]
+[% SET artURL = "http://www.animeevolution.com/?page_id=1559" %]
+[% SET volURL = "http://uchikoma.no-ip.org:8080/wiki/index.php/Main_Page" %]
+[% SET guestURL = "http://www.animeevolution.com/?page_id=1098" %]
 
 <VirtualHost *:80>
-	ServerName ae09.com
-	ServerAlias *.ae09.com
-	DocumentRoot /home/apache/vhosts/ae09.com/htdocs/
+    ServerName ae09.com
+    ServerAlias www.ae09.com
+    DocumentRoot /home/apache/vhosts/ae09.com/htdocs/
 
-	<Files .htaccess>
-		order allow,deny
-		deny from all
-	</Files>
-	
-	CustomLog "/var/log/httpd/ae09ag.com-access.log" combined
-	ErrorLog "/var/log/httpd/ae09ag.com-error.log"
+    <Files .htaccess>
+        order allow,deny
+        deny from all
+    </Files>
+    
+    CustomLog "/var/log/httpd/ae09ag.com-access.log" combined
+    ErrorLog "/var/log/httpd/ae09ag.com-error.log"
 
-	RewriteEngine  on
+    RewriteEngine  on
+    RewriteRule    ^/.*                      [% mainURL %] [NC,L,R]
+### For Uchi
+    RewriteRule    ^/vol                     [% volURL %] [NC,L,R]
+### For Art Gallery
+    RewriteRule    ^/AG                      [% artURL %] [NC,L,R]
+    RewriteRule    ^/art                     [% artURL %] [NC,L,R]
+    RewriteRule    ^/artGallery              [% artURL %] [NC,L,R]
+### Rest of them
+    RewriteRule    ^/guests?                 [% guestURL %] [NC,L,R]
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName vol.ae09.com
+    DocumentRoot /home/apache/vhosts/ae09.com/htdocs/
+    CustomLog "/var/log/httpd/ae09ag.com-access.log" combined
+    ErrorLog "/var/log/httpd/ae09ag.com-error.log"
+
+    RewriteEngine  on
+    RewriteRule    ^/.*                      [% volURL %] [NC,L,R]
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName art.ae09.com
+    DocumentRoot /home/apache/vhosts/ae09.com/htdocs/
+    
+    CustomLog "/var/log/httpd/ae09ag.com-access.log" combined
+    ErrorLog "/var/log/httpd/ae09ag.com-error.log"
+
+    RewriteEngine  on
 [% FOREACH artist = artists %]
-	RewriteRule    ^/[% artist.artist | html %].*   [% baseURL %]?artist=[% artist.artist | html %] [NC,L,R]
+    RewriteRule    ^/[% artist.artist | html %].*   /art/[% artist.artist | html %].php [NC,L]
 [% END %]
-	RewriteRule    ^/.*                      [% baseURL %] [NC,L,R]
+    RewriteRule    ^/.*                      [% artURL %] [NC,L,R]
 </VirtualHost>
